{
    "name": "InputControls",
    "maps": [
        {
            "name": "Touch",
            "id": "5bd78212-7dc6-429c-b57b-22d74d669304",
            "actions": [
                {
                    "name": "TapAndHold",
                    "type": "Button",
                    "id": "57df57cc-1142-41c7-9a9c-6dfb1fb7ba95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05,pressPoint=1.401298E-45)",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "6000a665-924a-49d5-9aae-1369fe0b96d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fec5cb6e-8a6f-42f4-ab9a-cfe15ecac217",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TapAndHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b90702d6-9d5f-4b78-8b01-634037e92ae2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "TapAndHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6d51a74-0599-4c89-9fae-cb943804beb4",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1aef0155-1f8e-4b5d-a83e-6c135c9a08c1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": []
        }
    ]
}